--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SmartTax: AI-Powered KRA Services</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      // Set theme on initial load to prevent FOUC
+      if (localStorage.getItem('smarttax_theme') === 'dark' || (!('smarttax_theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark')
+      } else {
+        document.documentElement.classList.remove('dark')
+      }
+    </script>
   <script type="importmap">
 {
   "imports": {
@@ -18,7 +26,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-100">
+  <body class="bg-gray-100 dark:bg-gray-900">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
